@@ -53,7 +53,7 @@ static unsigned RoleFromString (char const *role)
 {
 	unsigned res = REACTION_PROP_MAX;
 	while (res > REACTION_PROP_UNKNOWN &&
-		   !strcmp (ReactionPropRoles[--res], role)) ;
+		   strcmp (ReactionPropRoles[--res], role)) ;
 	return res;
 }
 
